2008-05-21  Philip Van Hoof <pvanhoof@gnome.org>

	* Writing in chunks of 64 bytes
	* Timeout per chunk is 15 seconds

2008-05-20  Philip Van Hoof <pvanhoof@gnome.org>

	* Fixed a fallback envelope fetch, don't do the clear on the summary.
	Instead mark all as expunged

2008-05-20  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/camel-lite/camel/camel-stream-filter.c:
	(do_write): if the camel_stream_write call does not write the
	 full buffer but it's not due to an error, then loop to go on
	 writing the stream.

2008-05-20  Philip Van Hoof <pvanhoof@gnome.org>

	* Differentiate between auto-cancellable and normally cancellable
	items in TnyCamelQueue

2008-05-16  Philip Van Hoof <pvanhoof@gnome.org>

	* Fixed size reporting in POP, regression fix it seems

2008-05-14  Jose Dapena Paz  <jdapena@igalia.com>

	* Use GOnce registering all types in tinymail to make
	registering thread-safe.

2008-05-14  Philip Van Hoof <pvanhoof@gnome.org>

	* libtinymail-camel/tny-camel-queue.c: Letting the thread wait for
	more items instead of exiting

2008-05-13  Rob Taylor  <rob.taylor@codethink.co.uk>

	* libtinymail-camel/tny-camel-bs-mime-part.c:
	(tny_camel_bs_mime_part_is_attachment_default): Modify the
	is_attachment heuristic in TnyCamelBSMimePart so that inline mime
	parts with filenames are considered attachments.

2008-05-12  Rob Taylor  <rob.taylor@codethink.co.uk>

	* configure.ac: Add --with-platform option 'none'.
	* bindings/python/Makefile.am: Fix up python bindings to work when built with no platform.
	* bindings/dotnet/Makefile.am: Don't build platform subdir if platform is none.
	* tests/vala-demo/Makefile.am: Fix up vala demo to use PLATFORM_LIBS for consistency.

2008-05-12  Rob Taylor  <rob.taylor@codethink.co.uk>

	* libtinymail/tny-error.c: Fix documentation

2008-05-12  Rob Taylor  <rob.taylor@codethink.co.uk>

	* m4/ticonv.m4: Add --with-iconv-detect-h option to allow the passing
	of a pre-generated iconv-detect.h rather than generating it at